--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help")%>
+
+<h1>Help</h1>
+<p>Get Help and recommend new features: contact us at <strong>thesajidali24@gmail.com</strong>.</p>
+</p>
+
+
+
