--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,11 @@
-<%provide(:title, "Home")%>
+<div class="center jumbotron">
+<h1>Welcome to the Blogpost App</h1>
+<h2>
+This is the home page for the Blogpost App.
 
-<h1>Sample App</h1>
-<p>Ths is home page for the RoR Sample Application. </p>
-   
+</h2>
+<%= link_to "Sign up now !", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
 
-
+<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
+"https://rubyonrails.org/" %>
